{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 1002,
  "lineage": "cc0ccf5f-1c70-50d0-dc02-0fd0e4fa130c",
  "resources": [
    {
      "module": "module.casestudy_compute",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:165261241687:loadbalancer/app/WPLoadBalancer/37eb17b4c16f1209",
            "arn_suffix": "app/WPLoadBalancer/37eb17b4c16f1209",
            "desync_mitigation_mode": "defensive",
            "dns_name": "WPLoadBalancer-1447787746.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:165261241687:loadbalancer/app/WPLoadBalancer/37eb17b4c16f1209",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "WPLoadBalancer",
            "security_groups": [
              "sg-0d524e0c8f023fbc1",
              "sg-0f4fa9e66eb1d3f85"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aac78c20a0416d3d"
              },
              {
                "subnet_id": "subnet-0d11eac69682d008c"
              }
            ],
            "subnets": [
              "subnet-0aac78c20a0416d3d",
              "subnet-0d11eac69682d008c"
            ],
            "tags": {
              "Name": "dev-Casestudy-ALB"
            },
            "tags_all": {
              "Name": "dev-Casestudy-ALB"
            },
            "vpc_id": "vpc-0190904dec2aa5a66",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.casestudy_compute.aws_security_group.alb",
            "module.casetsudy_vpc.aws_security_group.AppInstanceSecurityGroup",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet1",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet2",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.casestudy_compute",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:165261241687:listener/app/WPLoadBalancer/37eb17b4c16f1209/28707eac2e79260d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:165261241687:targetgroup/terraform-example-alb-target/532843c0164d3a70",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:165261241687:listener/app/WPLoadBalancer/37eb17b4c16f1209/28707eac2e79260d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:165261241687:loadbalancer/app/WPLoadBalancer/37eb17b4c16f1209",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.casestudy_compute.aws_alb.alb",
            "module.casestudy_compute.aws_alb_target_group.group",
            "module.casestudy_compute.aws_security_group.alb",
            "module.casetsudy_vpc.aws_security_group.AppInstanceSecurityGroup",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet1",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet2",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ]
        }
      ]
    },
    {
      "module": "module.casestudy_compute",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:165261241687:targetgroup/terraform-example-alb-target/532843c0164d3a70",
            "arn_suffix": "targetgroup/terraform-example-alb-target/532843c0164d3a70",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/wp-login.php",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 50,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:165261241687:targetgroup/terraform-example-alb-target/532843c0164d3a70",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-example-alb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-Casestudy-targetgroup"
            },
            "tags_all": {
              "Name": "dev-Casestudy-targetgroup"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.casestudy_compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:security-group/sg-0d524e0c8f023fbc1",
            "description": "Allow HTTP traffic to instances through Elastic Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d524e0c8f023fbc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_http_default",
            "name_prefix": "",
            "owner_id": "165261241687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-default-security_group-ALB"
            },
            "tags_all": {
              "Name": "dev-default-security_group-ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElasticIPAddress1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8c52e825ab74989",
            "domain": "vpc",
            "id": "eipalloc-0e8c52e825ab74989",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-224-0-155.compute-1.amazonaws.com",
            "public_ip": "34.224.0.155",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElasticIPAddress2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027ee2c4bfee16550",
            "domain": "vpc",
            "id": "eipalloc-027ee2c4bfee16550",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-23-115-221.compute-1.amazonaws.com",
            "public_ip": "52.23.115.221",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-Casestudy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:internet-gateway/igw-0e2c0ec8591c1c312",
            "id": "igw-0e2c0ec8591c1c312",
            "owner_id": "165261241687",
            "tags": {
              "Name": "dev-IGW-Casestudy"
            },
            "tags_all": {
              "Name": "dev-IGW-Casestudy"
            },
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8c52e825ab74989",
            "connectivity_type": "public",
            "id": "nat-0cc3b2feb9473bc1a",
            "network_interface_id": "eni-0ee1ddd417aea3a65",
            "private_ip": "10.0.0.232",
            "public_ip": "34.224.0.155",
            "subnet_id": "subnet-0d11eac69682d008c",
            "tags": {
              "Name": "dev-NATGateway1"
            },
            "tags_all": {
              "Name": "dev-NATGateway1"
            }
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_eip.ElasticIPAddress1",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet1",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027ee2c4bfee16550",
            "connectivity_type": "public",
            "id": "nat-089fe1aadf0e10600",
            "network_interface_id": "eni-05c06a33439ed0b3f",
            "private_ip": "10.0.1.59",
            "public_ip": "52.23.115.221",
            "subnet_id": "subnet-0aac78c20a0416d3d",
            "tags": {
              "Name": "dev-NATGateway2"
            },
            "tags_all": {
              "Name": "dev-NATGateway2"
            }
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_eip.ElasticIPAddress2",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet2",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTableAZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:route-table/rtb-0e1c5612e893aa1c1",
            "id": "rtb-0e1c5612e893aa1c1",
            "owner_id": "165261241687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cc3b2feb9473bc1a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-PrivateRouteTableAZ1"
            },
            "tags_all": {
              "Name": "dev-PrivateRouteTableAZ1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.casetsudy_vpc.aws_eip.ElasticIPAddress1",
            "module.casetsudy_vpc.aws_nat_gateway.NATGateway1",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet1",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTableAZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:route-table/rtb-0c505c2ef41538cd3",
            "id": "rtb-0c505c2ef41538cd3",
            "owner_id": "165261241687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-089fe1aadf0e10600",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-PrivateRouteTableAZ2"
            },
            "tags_all": {
              "Name": "dev-PrivateRouteTableAZ2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.casetsudy_vpc.aws_eip.ElasticIPAddress2",
            "module.casetsudy_vpc.aws_nat_gateway.NATGateway2",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet2",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:route-table/rtb-0a5f0d2cfcd198428",
            "id": "rtb-0a5f0d2cfcd198428",
            "owner_id": "165261241687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2c0ec8591c1c312",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-PublicRouteTable"
            },
            "tags_all": {
              "Name": "dev-PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.casetsudy_vpc.aws_internet_gateway.IGW-Casestudy",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AppSubnet1RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076cf3393bad2e8a3",
            "route_table_id": "rtb-0e1c5612e893aa1c1",
            "subnet_id": "subnet-010b39a03b012759b"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_eip.ElasticIPAddress1",
            "module.casetsudy_vpc.aws_nat_gateway.NATGateway1",
            "module.casetsudy_vpc.aws_route_table.PrivateRouteTableAZ1",
            "module.casetsudy_vpc.aws_subnet.AppSubnet1",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet1",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AppSubnet2RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6682118062d7f2c",
            "route_table_id": "rtb-0c505c2ef41538cd3",
            "subnet_id": "subnet-0b985b9cf17944477"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_eip.ElasticIPAddress2",
            "module.casetsudy_vpc.aws_nat_gateway.NATGateway2",
            "module.casetsudy_vpc.aws_route_table.PrivateRouteTableAZ2",
            "module.casetsudy_vpc.aws_subnet.AppSubnet2",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet2",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DatabaseSubnet1RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0106d60b376654d98",
            "route_table_id": "rtb-0e1c5612e893aa1c1",
            "subnet_id": "subnet-005918e60efa35f2b"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_eip.ElasticIPAddress1",
            "module.casetsudy_vpc.aws_nat_gateway.NATGateway1",
            "module.casetsudy_vpc.aws_route_table.PrivateRouteTableAZ1",
            "module.casetsudy_vpc.aws_subnet.DatabaseSubnet1",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet1",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DatabaseSubnet2RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d89aaae5fe6d1731",
            "route_table_id": "rtb-0c505c2ef41538cd3",
            "subnet_id": "subnet-033c83569ac7b7d46"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_eip.ElasticIPAddress2",
            "module.casetsudy_vpc.aws_nat_gateway.NATGateway2",
            "module.casetsudy_vpc.aws_route_table.PrivateRouteTableAZ2",
            "module.casetsudy_vpc.aws_subnet.DatabaseSubnet2",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet2",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnet1RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f31a5d6de28866c",
            "route_table_id": "rtb-0a5f0d2cfcd198428",
            "subnet_id": "subnet-0d11eac69682d008c"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_internet_gateway.IGW-Casestudy",
            "module.casetsudy_vpc.aws_route_table.PublicRouteTable",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet1",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnet2RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1903afe9d260b2d",
            "route_table_id": "rtb-0a5f0d2cfcd198428",
            "subnet_id": "subnet-0aac78c20a0416d3d"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_internet_gateway.IGW-Casestudy",
            "module.casetsudy_vpc.aws_route_table.PublicRouteTable",
            "module.casetsudy_vpc.aws_subnet.PublicSubnet2",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AppInstanceSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:security-group/sg-0f4fa9e66eb1d3f85",
            "description": "Security Group allowing HTTP traffic for lab instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4fa9e66eb1d3f85",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d524e0c8f023fbc1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-AppInstanceSecurityGroup",
            "name_prefix": "",
            "owner_id": "165261241687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-AppInstanceSecurityGroup"
            },
            "tags_all": {
              "Name": "dev-AppInstanceSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.casestudy_compute.aws_security_group.alb",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EFSMountTargetSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:security-group/sg-0a09e04817e377184",
            "description": "Security Group allowing traffic between EFS Mount Targets and Amazon EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a09e04817e377184",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f4fa9e66eb1d3f85"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-EFSMountTargetSecurityGroup",
            "name_prefix": "",
            "owner_id": "165261241687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-EFSMountTargetSecurityGroup"
            },
            "tags_all": {
              "Name": "dev-EFSMountTargetSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.casestudy_compute.aws_security_group.alb",
            "module.casetsudy_vpc.aws_security_group.AppInstanceSecurityGroup",
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ElastiCacheSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:security-group/sg-0410612c6cfafb32d",
            "description": "Security Group allowing ElastiCache to have internet traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0410612c6cfafb32d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11211
              }
            ],
            "name": "dev-ElastiCacheSecurityGroup",
            "name_prefix": "",
            "owner_id": "165261241687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ElastiCacheSecurityGroup"
            },
            "tags_all": {
              "Name": "dev-ElastiCacheSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDSSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:security-group/sg-0d198bc23f05d37e1",
            "description": "Security Group allowing RDS instances to have internet traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d198bc23f05d37e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-RDSSecurityGroup",
            "name_prefix": "",
            "owner_id": "165261241687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-RDSSecurityGroup"
            },
            "tags_all": {
              "Name": "dev-RDSSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AppSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:subnet/subnet-010b39a03b012759b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010b39a03b012759b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165261241687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-AppSubnet1"
            },
            "tags_all": {
              "Name": "dev-AppSubnet1"
            },
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AppSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:subnet/subnet-0b985b9cf17944477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b985b9cf17944477",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165261241687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-AppSubnet2"
            },
            "tags_all": {
              "Name": "dev-AppSubnet2"
            },
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DatabaseSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:subnet/subnet-005918e60efa35f2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005918e60efa35f2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165261241687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-DatabaseSubnet1"
            },
            "tags_all": {
              "Name": "dev-DatabaseSubnet1"
            },
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DatabaseSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:subnet/subnet-033c83569ac7b7d46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033c83569ac7b7d46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165261241687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-DatabaseSubnet2"
            },
            "tags_all": {
              "Name": "dev-DatabaseSubnet2"
            },
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:subnet/subnet-0d11eac69682d008c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d11eac69682d008c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165261241687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-PublicSubnet1"
            },
            "tags_all": {
              "Name": "dev-PublicSubnet1"
            },
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:subnet/subnet-0aac78c20a0416d3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aac78c20a0416d3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165261241687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-PublicSubnet2"
            },
            "tags_all": {
              "Name": "dev-PublicSubnet2"
            },
            "vpc_id": "vpc-0190904dec2aa5a66"
          },
          "dependencies": [
            "module.casetsudy_vpc.aws_vpc.CaseStudyVPC",
            "module.casetsudy_vpc.data.aws_availability_zones.available-AZs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.casetsudy_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CaseStudyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165261241687:vpc/vpc-0190904dec2aa5a66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e5c7e741c54b1f66",
            "default_route_table_id": "rtb-068b86d64235348fc",
            "default_security_group_id": "sg-0b2ff5cc1b8a43637",
            "dhcp_options_id": "dopt-04bacb3ea3ae53f4c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0190904dec2aa5a66",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068b86d64235348fc",
            "owner_id": "165261241687",
            "tags": {
              "Name": "dev-CaseStudyVPC"
            },
            "tags_all": {
              "Name": "dev-CaseStudyVPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}